clusters/k8s-01/apps/matrix/configs/httproute-admin.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ess-admin
spec:
  hostnames:
    - admin.chat.volcan.cloud
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-chat-volcan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ess-element-admin
          port: 8080
