clusters/k8s-01/apps/matrix/configs/httproute-element.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ess-element-web
spec:
  hostnames:
    - element.chat.volcan.cloud
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https-chat-volcan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ess-element-web
          port: 80
