clusters/k8s-01/apps/matrix/configs/httproute-rtc.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ess-rtc
spec:
  hostnames:
    - rtc.chat.volcan.cloud
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https-chat-volcan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ess-lk-jwt-service
          port: 8080
