clusters/k8s-01/apps/matrix/configs/httproute-synapse.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ess-synapse
spec:
  hostnames:
    - synapse.chat.volcan.cloud
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https-chat-volcan
    - name: internal
      namespace: kube-system
      sectionName: https-chat-volcan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /_matrix/client/api/v1/login
        - path:
            type: PathPrefix
            value: /_matrix/client/api/v1/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/api/v1/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/login
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/login
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/unstable/login
        - path:
            type: PathPrefix
            value: /_matrix/client/unstable/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/unstable/logout
      backendRefs:
        - name: ess-matrix-authentication-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ess-synapse
          port: 8008
